# data-analyst-mcp

./: .gitignore  CHANGELOG.md  DEPS.md  LICENSE  README.md  ROADMAP.md  claude_desktop_config.example.json  pyproject.toml  titanic_analysis.ipynb  titanic_full_analysis.ipynb
.github/workflows/: ci.yml
docs/: SPEC.md
docs/proposals/: 2026-07-08-model-workflow-bundle.md  2026-07-18-ephemeral-fit-replay-provenance.md  README.md  find_outliers.md  materialize_query.md  pairwise_comparisons.md  power_analysis.md  regression_diagnostic_plots.md
docs/superpowers/plans/: 2026-06-01-logistic-separation-error.md  2026-07-05-dataset-provenance-hashes.md  2026-07-05-fit-then-overwrite-replay.md  2026-07-08-model-workflow-bundle.md  2026-07-14-replay-guard-gaps.md  2026-07-18-load-session-from-notebook.md  2026-07-18-prefix-replay-guards.md
docs/superpowers/specs/: 2026-06-01-logistic-separation-design.md  2026-07-05-dataset-provenance-hashes-design.md  2026-07-05-fit-then-overwrite-replay-design.md  2026-07-08-model-workflow-bundle-design.md  2026-07-14-replay-guard-gaps-design.md  2026-07-18-load-session-from-notebook-design.md
evals/: README.md  conftest.py  eval_basic.py  eval_diagnostic_plots.py  eval_full_workflow.py  eval_materialize.py  eval_messy_csv.py  eval_outliers.py  eval_pairwise.py  eval_power.py  eval_replay_guards.py  eval_resume.py  eval_split_cv.py  eval_stats.py  eval_titanic.py
fixtures/: README.md  _build_breast_cancer.py  _build_messy.py  breast_cancer.csv  generate_synthetic_crm.py  messy.csv
fixtures/_mcar_reference/: README.md  expected.json  generate.py  iris_mar.csv  nhanes.csv  ozone.csv
fixtures/_negbin_reference/: README.md  expected.json  ref1.csv  ref2.csv  ref3.csv
fixtures/synthetic_crm/: accounts.csv  contacts.csv  opportunities.csv
scripts/: check_tdd_commits.py  install_mcp.py
src/data_analyst_mcp/: __init__.py  __main__.py  digest.py  errors.py  formatting.py  journal_evidence.py  manifest.py  provenance.py  read_options.py  recorder.py  server.py  session.py
src/data_analyst_mcp/tools/: __init__.py  _outlier_helpers.py  _sql_safety.py  crossval.py  datasets.py  evaluate.py  materialize.py  missingness.py  models.py  multitest.py  notebook.py  outliers.py  plots.py  posthoc.py  power.py  predict.py  query.py  resume.py  split.py  stats.py
tests/: conftest.py  test_crossval.py  test_datasets.py  test_digest.py  test_emit_notebook.py  test_errors.py  test_evaluate.py  test_formatting.py  test_journal_evidence.py  test_manifest.py  test_materialize.py  test_missingness.py  test_model_registry.py  test_models.py  test_multitest.py  test_outliers.py  test_plots.py  test_posthoc.py  test_power.py  test_predict.py  test_provenance.py  test_query.py  test_recorder.py  test_resume.py  test_security.py  test_session.py  test_smoke.py  test_split.py  test_stats.py
