[project]
name = "data-analyst-mcp"
version = "0.1.0"
description = "Reproducible data-analyst MCP server — DuckDB + pandas + scipy/statsmodels, emits sessions as runnable Jupyter notebooks."
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Oleg Tyshchenko", email = "oleg.tyshchenko@gmail.com" }
]
requires-python = ">=3.13"
keywords = ["mcp", "model-context-protocol", "duckdb", "data-analysis", "statistics", "claude"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "mcp[cli]>=1.2.0",
    "duckdb>=1.1.0",
    "pandas>=2.2.0",
    "scipy>=1.14.0",
    "statsmodels>=0.14.0",
    "matplotlib>=3.9.0",
    "nbformat>=5.10.0",
    "pydantic>=2.9.0",
]

[project.scripts]
data-analyst-mcp = "data_analyst_mcp.__main__:main"

[project.urls]
Repository = "https://github.com/olegtyshcneko/data-analyst-mcp"
Issues = "https://github.com/olegtyshcneko/data-analyst-mcp/issues"

[build-system]
requires = ["uv_build>=0.11.13,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.7.0",
    "pyright>=1.1.380",
    "faker>=30.0.0",
    "jupyter>=1.1.0",
    "nbclient>=0.10.0",
    "pillow>=10.4.0",
]

[tool.ruff]
line-length = 100
target-version = "py313"
extend-exclude = ["fixtures/_build_messy.py", "fixtures/generate_synthetic_crm.py"]

[tool.ruff.lint]
select = [
    "E", "F", "W",   # pycodestyle + pyflakes
    "I",             # isort
    "B",             # bugbear
    "UP",            # pyupgrade
    "SIM",           # simplify
    "RUF",           # ruff-specific
    "TID",           # tidy-imports
]
ignore = [
    "E501",          # line too long (formatter handles it)
    "RUF001",        # ambiguous unicode chars in strings (we use × and α in interpretations)
    "RUF002",        # ambiguous unicode chars in docstrings (same)
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["B", "SIM"]
"evals/**" = ["B", "SIM"]

[tool.pyright]
include = ["src"]
exclude = ["tests", "evals", "fixtures", "**/__pycache__"]
strict = ["src"]
pythonVersion = "3.13"
reportMissingTypeStubs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
]
markers = [
    "slow: marks tests as slow",
]

[tool.coverage.run]
source = ["data_analyst_mcp"]
branch = true
omit = [
    "*/data_analyst_mcp/__main__.py",  # console-script shim, exercised in integration only
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
show_missing = true
skip_covered = false
